# open-data-hackathon-2024

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
docs/: データモデル.md  プロジェクト概要.md  業務プロセスモデル.md  画面設計（Webアプリ）.md  画面設計（モバイルアプリ）.md  画面遷移図.md  要件定義.md
src/api/: Makefile  config.py  crud.py  database.py  main.py  migrate.py  models.py  requirements.txt  run_app.py  schemas.py
src/api/app/: config.py  database.py  main.py
src/api/crud/: ble_device.py  evacuee.py  material.py  material_detail.py  shelter.py
src/api/migration/: 001_create_tables.sql
src/api/routers/: ble.py  evacuees.py  material_details.py  materials.py  shelters.py
src/app/: Dashboard.tsx  globals.css  page.tsx
src/app/cities/[cityId]/shelters/[shelterId]/: page.tsx
src/app/dashboard/: Charts.tsx  Dashboard.tsx  UserList.tsx  page.tsx
src/app/mobile/: MobilePage.tsx  page.tsx
src/app/mobile/MyPage/Edit/: Edit.tsx  page.tsx
src/app/mobile/MyPage/edit/: Edit.tsx  page.tsx
src/app/mobile/MyPage/view/: View.tsx  page.tsx  view.tsx
src/app/mobile/QRread/success/: QRreadSuccess.tsx  page.tsx
src/app/pages/bles/: page.tsx
src/app/pages/dashboard/: page.tsx
src/app/pages/dashboard/components/: Charts.tsx  server.ts
src/components/: dashboard.tsx
