[project]
name = "open-data-hackathon-2024"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "winnie279", email = "57951904+Yuji-207@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.112.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/open_data_hackathon_2024"]
